<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />



        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/blues"
            android:textStyle="bold"
            android:textSize="25sp"
            tools:text="@string/gmmtv_name" />

        <TextView
            android:id="@+id/tv_item_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="@string/gmmtv_born" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_dramapop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blues"
            tools:text="@string/gmmtv_pop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/img_item_photo3"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_drama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="210dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                tools:text="@string/gmmtv_drama" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/img_item_photo4"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_drama2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="210dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                tools:text="@string/gmmtv_drama" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/img_item_photo5"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_drama3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="210dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                tools:text="@string/gmmtv_drama" />

        </FrameLayout>



    </LinearLayout>


</ScrollView>